<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Layout for the editor -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".ProductDetailsActivity">

        <!-- Product category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_product" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/decrease_product_quantity"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="#FFB74D"
                        android:text="-1" />

                    <!-- Quantity field -->
                    <EditText
                        android:id="@+id/edit_product_quantity"
                        style="@style/EditorFieldStyle"
                        android:layout_weight="1"
                        android:hint="@string/hint_product_quantity"
                        android:inputType="number"
                        android:maxLength="6" />

                    <Button
                        android:id="@+id/increase_product_quantity"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="#FFB74D"
                        android:text="+1" />

                </LinearLayout>

                <!-- Price fields -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- Price field -->
                    <EditText
                        android:id="@+id/edit_product_price"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_product_price"
                        android:inputType="number"
                        android:maxLength="10" />

                    <!-- Units for price ($) -->
                    <TextView
                        android:id="@+id/label_price_units"
                        style="@style/EditorUnitsStyle"
                        android:text="@string/unit_product_price" />

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

        <!-- Supplier category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_margin">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords" />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_supplier_email"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
        </LinearLayout>

        <!-- Image category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_margin">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Button
                    android:id="@+id/pick_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:backgroundTint="#FFB74D"
                    android:text="@string/button_pick_image" />

                <!-- Product image -->
                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:maxHeight="@dimen/max_image_height"
                    android:scaleType="fitCenter" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>